# goit-software-07

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: ada1c3cc1221_init.py
prog/: connect.py  lessons.txt  models.py  my_select.py  seed.py  students_group.txt
