[tool.poetry]
name = "goit-software-07"
version = "0.1.0"
description = ""
authors = ["Slytherin fantom <uliadiakiv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
sqlalchemy = "1.4.52"
faker = "^25.0.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
